2005/09/01 Matt Zimmerman <zubov@users.sourceforge.net>
* Added "site group" support, thanks fr0w
 - allows you to set certain settings for an entire group all at once
* Added support for max_sim_dn and max_sim_up, thanks fr0w

2005/08/28 Matt Zimmerman <zubov@users.sourceforge.net>
* Added SSCN and CPSV support for secure fxp, thanks Michel!
* Added support listen on certain interfaces for control connections

2005/07/10 Matt Zimmerman <zubov@users.sourceforge.net>
* 2.0RC5 released
* Nothing major to report on since RC4
- "ghost" connections should not be possible
- closed a couple leaky file descriptors

2005/04/18 Matt Zimmerman <zubov@users.sourceforge.net>
* 2.0RC4 released

2005/03/25 Morgan Christiansson <drftpd@mog.se>
* Added ${transfered} for !speed command. Thanks to agne.
* Small cleanups.

2005/03/13 Matt Zimmerman <zubov@users.sourceforge.net>
* 2.0RC3 released

2005/03/12 Matt Zimmerman <zubov@users.sourceforge.net>
* Blowfish has own settings for each channel
* User/Group Permissions on a channel can be used to restrict access per argument:
 - SITE BLOWFISH #channel
 - SITE INVITE
 - !invite

2005/03/02 Matt Zimmerman <zubov@users.sourceforge.net>
* Hell has frozen over, Dark finally submitted his .diz patch
* We finally bent, nice work Dark!

2005/03/01 Jamal James <teflon114@gmail.com>
* Fixed !speed ... i hope
* Fixed Trails plugin and !passed to work with the new SiteBot
* Moved all net.drmods.plugins.* configuration from .properties files to drmods.conf
* Added !new irc plugin

2005/02/27 Jamal James <teflon114@gmail.com>
* All sitebot plugins converted to work with the new implementation
  It compiles ... w00h00
* All bugs with !rank should be fixed now. I redid the entire thing from scratch
* Added !find irc plugin ... thx [SMAN]


2005/02/27 Matt Zimmerman <zubov@users.sourceforge.net>
* New internal SiteBot interface, if you're not a developer, don't bother

2005/02/26 Jamal James <teflon114@gmail.com>
* Applied creditloss fix. Thx TDSoul