@@ -14,11 +14,11 @@ adduser.success=User ${targetuser} created
 help.change=site change <username> <field> <value>
 help.change.specific=site change <username> <field> <value>\n\
 Valid fields: group, created, ratio, idle_time, credits, tagline\n\
-              num_logins # [opt perIP], comment\n\
+              num_logins # [opt perIP], comment, group_ratio #min #max\n\
               group_slots # [opt leech slots], wkly_allotment, max_sim #dn #up
 change.specify=You need to specify a value to change
 
-changeratio.invalidratio=Ratio must be 0 or 3
+changeratio.invalidratio=Ratio must be 0 or between ${minratio} and ${maxratio}
 changeratio.nomoreslots=You have used all your leech slots
 changeratio.success=Changed ratio to 1:${newratio}
 changecredits.success=Changed credits to ${newcredits}
@@ -29,6 +29,7 @@ changenumlogins.success=Changed max logins to ${numlogins} and from same IP to $
 changegroupslots.success=Changed group slots to ${groupslots} and group leech slots to ${groupleechslots}
 changemaxsim.success=Changed max simultaneous download/upload slots to ${maxdn}/${maxup}
 changecreated.success=Reset creation time for ${targetuser}
+changegadminratio.success=Changed gadmin min/max ratio to ${minratio}/${maxratio}
 
 help.chgrp=site chgrp <user> <group> [<group> ...]
 help.chpass=site chpass <user> <password>
@@ -60,7 +61,8 @@ Total logins: ${org.drftpd.plugins.Statistics@logins,-16} Idle time: ${idletime}
 Ratio: ${org.drftpd.commands.UserManagement@ratio,-23} Credits: ${credits}\n\
 Max logins: ${org.drftpd.commands.UserManagement@maxlogins,-18} From same IP: ${org.drftpd.commands.UserManagement@maxloginsip}\n\
 Max sim uploads: ${org.drftpd.commands.UserManagement@maxsimup,-13} Max sim downloads: ${org.drftpd.commands.UserManagement@maxsimdn}\n\
-Group / Leech slots: ${org.drftpd.commands.UserManagement@groupslots} ${org.drftpd.commands.UserManagement@leechslots}\n\
+Group / Leech slots: ${org.drftpd.commands.UserManagement@groupslots,-3} ${org.drftpd.commands.UserManagement@leechslots,-6}\
+Group Min/Max Ratio: ${org.drftpd.commands.UserManagement@minratio}/${org.drftpd.commands.UserManagement@maxratio}\n\
 Total uploaded: ${uploaded,-14} Total downloaded: ${downloaded}\n\
 Times nuked: ${org.drftpd.commands.Nuke@nuked,-17} Bytes nuked: ${org.drftpd.commands.Nuke@nukedBytes}\n\
 Primary group: ${group,-15} Banned: ${isbanned}\n\
